--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -3,8 +3,8 @@
     <title>To-Do lists</title>
   </head>
   <body>
-    <h1>Start A New To-Do list</h1>
-    <form method="POST"> 
+    <h1>Your To-Do list</h1>
+    <form method="POST" action="/"> 
     {% csrf_token %}
       <input
         name="item_text"
