--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -6,12 +6,13 @@
     <h1>Start A New To-Do list</h1>
     <form method="POST" action="/lists/new"> 
     {% csrf_token %}
+      <p style="text-align:center;">
       <input
         name="item_text"
         id="id_new_item"
         placeholder="Enter a to-do item"
       />
-      
+      </p>      
     </form>
     <table id="id_list_table">
       {% for item in items %}
